--- a/demo/index.html
+++ b/demo/index.html
@@ -1,3 +1,21 @@
+<!--
+    Copyright (C) 2020 b1f6c1c4
+
+    This file is part of IPA-JFK.
+
+    IPA-JFK is free software: you can redistribute it and/or modify it under
+    the terms of the GNU Affero General Public License as published by the Free
+    Software Foundation, version 3.
+
+    IPA-JFK is distributed in the hope that it will be useful, but WITHOUT ANY
+    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+    FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for
+    more details.
+
+    You should have received a copy of the GNU Affero General Public License
+    along with IPA-JFK.  If not, see <https://www.gnu.org/licenses/>.
+-->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -20,6 +38,13 @@
       <input type="radio" id="latex" name="format" value="latex"><label for="latex">LaTeX/tipa</label>
     </form>
     <ul id="results"></ul>
+
+    <pre>IPA-JFK
+Copyright (C) 2020 b1f6c1c4
+This is free software, licensed under AGPL-v3.0-only.
+See the source code for copying conditions.
+You can obtain the source code from GitHub:
+https://github.com/b1f6c1c4/IPA-JFK</pre>
 
     <script src="main.js"></script>
 
