--- a/demo/index.html
+++ b/demo/index.html
@@ -33,7 +33,7 @@
 
     <p id="loading">Loading...</p>
     <form action="#" style="display: none" id="frm">
-      <input type="text" id="word" name="word"><br>
+      <input type="text" id="word" name="word" autofocus><br>
       <input type="radio" id="unicode" name="format" value="unicode" checked><label for="unicode">Unicode</label>
       <input type="radio" id="latex" name="format" value="latex"><label for="latex">LaTeX/tipa</label>
     </form>
