--- a/demo/index.html
+++ b/demo/index.html
@@ -43,6 +43,8 @@
         <input type="text" id="ph" name="ph"><br>
         <label for="ae">/&aelig;/-raising Hints</label>
         <input type="text" id="ae" name="ae"><br>
+        <label for="ae">Syllabification Hints</label>
+        <input type="text" id="syllable" name="syllable"><br>
       </details>
     </form>
     <ul id="results"></ul>
