--- a/demo/index.html
+++ b/demo/index.html
@@ -45,6 +45,7 @@
         <input type="text" id="ae" name="ae"><br>
         <label for="ae">Syllabification Hints</label>
         <input type="text" id="syllable" name="syllable"><br>
+        <input type="checkbox" id="phonetic" name="phonetic" checked><label for="phonetic">Phonetic (narrow) transcription</label>
       </details>
     </form>
     <ul id="results"></ul>
