Miscellaneous fixes towards "parcel"

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,7 @@
     <p>GitHub: <a href="https://github.com/b1f6c1c4/IPA-JFK">b1f6c1c4/IPA-JFK</a></p>
 
     <p id="loading">Loading...</p>
-    <form action="#" style="display: none" id="frm">
+    <form action="#" id="frm">
       <input type="text" id="word" name="word" autofocus><br>
       <input type="radio" id="unicode" name="format" value="unicode" checked><label for="unicode">Unicode</label>
       <input type="radio" id="latex" name="format" value="latex"><label for="latex">LaTeX/tipa</label>
