--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (C) 2020 b1f6c1c4
+    Copyright (C) 2020-2021 b1f6c1c4
 
     This file is part of IPA-JFK.
 
@@ -51,7 +51,7 @@
     <ul id="results"></ul>
 
     <pre>IPA-JFK
-Copyright (C) 2020 b1f6c1c4
+Copyright (C) 2020-2021 b1f6c1c4
 This is free software, licensed under AGPL-v3.0-only.
 See the source code for copying conditions.
 You can obtain the source code from GitHub:
